@@ -1,3 +1,8 @@
+2005-10-08  James Lemke  <jim@wasabisystems.com>
+
+	* arm-dis.c (coprocessor_opcodes): Fix mask for various Maverick CDP
+	operations.
+
 2005-10-06  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* ppc-dis.c (struct dis_private): Remove.
